--- a/main.html
+++ b/main.html
@@ -11,6 +11,35 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<h1>My Playlist</h1>
+	<div class='player_one'>
+		<a href='https://www.youtube.com/watch?v=kd-6aw99DpA '>song1</a>
+		<a href='https://www.youtube.com/watch?v=9iIX4PBplAY '>song2</a>
+		<a href='https://www.youtube.com/watch?v=IjBAgWKW12Y '>song3</a>
+		<a href='https://www.youtube.com/watch?v=puKD3nkB1h4'>song4</a>
+		<a href='https://www.youtube.com/watch?v=6MgsHSAcI9k'>song5</a>
+	</div>
+
+		<div class="two">
+			<div>
+				<h2>Now Playing...</h>
+			</div>
+		
+		<div class='player_two'>
+			<video width="320" height="240" autoplay muted>
+			  <source src="https://www.w3schools.com/tags/movie.mp4" type="video/mp4">
+			</video>
+
+			<h2>Mp3 songs</h2>
+			<audio controls autoplay>
+					  <source src="https://www.pagalworld.com.se/files/download/id/64630" type="audio/ogg">
+				</audio>
+		</div>
+
+			<div>
+				
+			</div>
+	</div>
 </body>
 
 </html>
