--- a/main.html
+++ b/main.html
@@ -26,12 +26,12 @@
 			</div>
 		
 		<div class='player_two'>
-			<video width="320" height="240" autoplay muted>
+			<video width="320" height="240" controls autoplay muted>
 			  <source src="https://www.w3schools.com/tags/movie.mp4" type="video/mp4">
 			</video>
 
 			<h2>Mp3 songs</h2>
-			<audio controls autoplay>
+			<audio controls>
 					  <source src="https://www.pagalworld.com.se/files/download/id/64630" type="audio/ogg">
 				</audio>
 		</div>
