--- a/main.html
+++ b/main.html
@@ -13,11 +13,11 @@
 
 	<h1>My Playlist</h1>
 	<div class='player_one'>
-		<a href='https://www.youtube.com/watch?v=kd-6aw99DpA '>song1</a>
-		<a href='https://www.youtube.com/watch?v=9iIX4PBplAY '>song2</a>
-		<a href='https://www.youtube.com/watch?v=IjBAgWKW12Y '>song3</a>
-		<a href='https://www.youtube.com/watch?v=puKD3nkB1h4'>song4</a>
-		<a href='https://www.youtube.com/watch?v=6MgsHSAcI9k'>song5</a>
+		<a href='https://www.youtube.com/watch?v=kd-6aw99DpA' target="_blank">song1</a>
+		<a href='https://www.youtube.com/watch?v=9iIX4PBplAY' target="_blank">song2</a>
+		<a href='https://www.youtube.com/watch?v=IjBAgWKW12Y' target="_blank">song3</a>
+		<a href='https://www.youtube.com/watch?v=puKD3nkB1h4' target="_blank">song4</a>
+		<a href='https://www.youtube.com/watch?v=6MgsHSAcI9k' target="_blank">song5</a>
 	</div>
 
 		<div class="two">
