--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
 	</div>
 
 		<div class="two">
-				<h2>Now Playing...</h>
+				<h2>Now Playing...</h2>
 		<div class='player_two'>
 			<video width="320" height="240" controls autoplay muted>
 			  <source src="https://www.w3schools.com/tags/movie.mp4" type="video/mp4">
